[package]
name = "rust-os"
version = "0.1.0"
authors = ["Christian González <cgonzalez@opennebula.systems>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
